--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@react-hook/window-size": "^3.1.1",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "lucide-react": "^0.244.0",
